cmd/webhook/admission/testdata/rules/routegroup-allowed.yaml
apiVersion: zalando.org/v1
kind: RouteGroup
metadata:
  name: foo
  namespace: foo
  labels:
    application: foo
spec:
  hosts:
    - example.org
  backends:
    - name: app
      type: service
      serviceName: app-svc
      servicePort: 80
  routes:
    - path: /
      backends:
        - backendName: app
