cmd/webhook/admission/testdata/rules/routegroup-rejected.yaml
apiVersion: zalando.org/v1
kind: RouteGroup
metadata:
  name: foo
  namespace: foo
  # no application label
spec:
  hosts:
    - example.org
    # hosts in .cluster-domain.test domain must be in .alias.cluster-domain.test
    - foo.alias-test.cluster-domain.test
  backends:
    - name: app
      type: service
      serviceName: app-svc
      servicePort: 80
  routes:
    - path: /
      filters:
        # oauthTokeninfoAnyScope with uid scope
        - oauthTokeninfoAnyScope("uid", "foo.read")
      backends:
        - backendName: app
